# infinite-studio

./: .env.example  .gitignore  README.md
backend/: pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: health.py
backend/app/core/: config.py  db.py
docker/: docker-compose.yml
docs/: 2026-06-03-infinite-studio-ai-workshop-design.md  2026-06-03-infinite-studio-mvp-1-table-design.md
frontend/: pnpm-lock.yaml  vite.config.ts
frontend/src/api/: health.ts
frontend/src/views/: HomeView.vue
