[project]
name = "infinite-studio-backend"
version = "0.1.0"
description = "Infinite Studio backend (FastAPI)"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.3",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "sqlalchemy[asyncio]>=2.0",
    "uvicorn[standard]>=0.49.0",
]

# 应用式项目（非可分发库）：不声明 build-system，uv 仅做依赖/虚拟环境管理。

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.16",
]
